knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__Termination_Notice_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Termination_Notice_Issue_Date__c</fullName>
    <description>Date termination notice was sent / received</description>
    <label>Termination Notice Issue Date</label>
    <type>Date</type>
</CustomField>