knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__VersionAware__c.field-meta.xml
<CustomField>
    <fullName>Apttus__VersionAware__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this agreement is Version aware. This flag enables versioning on all documents of this agreement record, provided document versioning is enabled in custom settings.</description>
    <inlineHelpText>Indicates if this agreement is Version aware. This flag enables versioning on all documents of this agreement record, provided document versioning is enabled in custom settings.</inlineHelpText>
    <label>Version Aware</label>
    <type>Checkbox</type>
</CustomField>