knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__Workflow_Trigger_Created_From_Clone__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Workflow_Trigger_Created_From_Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a transient agreement that may get deleted by the user. A new agreement is in transient state until the agreement is explicitly saved by the user. A new agreement is created by new, clone, amend, renew, create offline or create from opportunity methods. Workflow rules should check this field to test for false before firing so that rules are not incorrectly fired when transient agreements are created .</description>
    <inlineHelpText>Indicates a transient agreement that may get deleted by the user. A new agreement is in transient state until the agreement is explicitly saved by the user.</inlineHelpText>
    <label>Is Transient</label>
    <type>Checkbox</type>
</CustomField>