knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__Workflow_Trigger_Viewed_Final__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Workflow_Trigger_Viewed_Final__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that gets set by the Generate Agreement scontrol when an agreement is generated.  This flag then becomes the trigger for workflow rules that get fired when the Generate Agreement action is completed.</description>
    <label>Workflow Trigger Generated Agreement</label>
    <type>Checkbox</type>
</CustomField>