knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Entity</label>
    <type>Checkbox</type>
</CustomField>