knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Christus_JV__c.field-meta.xml
<CustomField>
    <fullName>Christus_JV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Christus JV</label>
    <type>Checkbox</type>
</CustomField>