knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Clause_Template_Variable__c.field-meta.xml
<CustomField>
    <fullName>Clause_Template_Variable__c</fullName>
    <label>Clause Template Variable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>