knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Clinician_Facility_Association__c.field-meta.xml
<CustomField>
    <fullName>Clinician_Facility_Association__c</fullName>
    <label>Clinician Facility Association</label>
    <length>255</length>
    <type>Text</type>
</CustomField>