knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Clinician_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Clinician_First_Name__c</fullName>
    <formula>Contract__r.Account.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clinician First Name</label>
    <type>Text</type>
</CustomField>