knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Clinician_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Clinician_Last_Name__c</fullName>
    <formula>Contract__r.Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clinician Last Name</label>
    <type>Text</type>
</CustomField>