knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Clinician_Name__c.field-meta.xml
<CustomField>
    <fullName>Clinician_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinician Name</label>
    <type>Checkbox</type>
</CustomField>