knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Clinician_Switching_from_EE_to_IC__c.field-meta.xml
<CustomField>
    <fullName>Clinician_Switching_from_EE_to_IC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinician Switching from EE to IC</label>
    <type>Checkbox</type>
</CustomField>