knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Clinician_switching_from_IC_to_EE__c.field-meta.xml
<CustomField>
    <fullName>Clinician_switching_from_IC_to_EE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinician switching from IC to EE</label>
    <type>Checkbox</type>
</CustomField>