knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Code_Set__c.field-meta.xml
<CustomField>
    <fullName>Code_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Set</label>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>