knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Contract_Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Employment_Type__c</fullName>
    <formula>TEXT(Contract__r.Employment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Employment Type</label>
    <type>Text</type>
</CustomField>