knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Contract_Perpetual__c.field-meta.xml
<CustomField>
    <fullName>Contract_Perpetual__c</fullName>
    <formula>Contract__r.Perpetual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Perpetual</label>
    <type>Checkbox</type>
</CustomField>