knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Contracting_Corporate_Entity__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Corporate_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracting Corporate Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements (Contracting Corporate Entity)</relationshipLabel>
    <relationshipName>Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>