knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Corporate_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Entity_Name__c</fullName>
    <description>Name of Corporate Entity on Contract</description>
    <formula>Corporate_Entity__r.Name</formula>
    <label>Corporate Entity Name</label>
    <type>Text</type>
</CustomField>