knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Corporate_Provider_Signatory_Title__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Provider_Signatory_Title__c</fullName>
    <formula>Corporate_Entity__r.Provider_Signatory_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Provider Signatory Title</label>
    <type>Text</type>
</CustomField>