knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Display_Addendum_A_2__c.field-meta.xml
<CustomField>
    <fullName>Display_Addendum_A_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Addendum A 2</label>
    <type>Checkbox</type>
</CustomField>