knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Display_Addendum_B__c.field-meta.xml
<CustomField>
    <fullName>Display_Addendum_B__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Addendum B</label>
    <type>Checkbox</type>
</CustomField>