knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/EE_NPPA_Hour_Tier_Change__c.field-meta.xml
<CustomField>
    <fullName>EE_NPPA_Hour_Tier_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EE NPPA Hour Tier Change</label>
    <type>Checkbox</type>
</CustomField>