knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Encounter__c.field-meta.xml
<CustomField>
    <fullName>Encounter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Encounter</label>
    <type>Checkbox</type>
</CustomField>