knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Entity_Change__c.field-meta.xml
<CustomField>
    <fullName>Entity_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entity Change</label>
    <type>Checkbox</type>
</CustomField>