knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Exhibit_A_Long__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_A_Long__c</fullName>
    <label>Exhibit A Long</label>
    <length>255</length>
    <type>Text</type>
</CustomField>