knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Facilities_Added__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facilities Added</label>
    <type>Checkbox</type>
</CustomField>