knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Facility_Names__c.field-meta.xml
<CustomField>
<<<<<<<< HEAD:force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Facility_Names__c.field-meta.xml
    <fullName>Facility_Names__c</fullName>
    <label>Facility Names</label>
========
    <fullName>Answer__c</fullName>
    <label>Answer</label>
>>>>>>>> feature/US-0002330:force-app/main/default/objects/CET_Reference__c/fields/Answer__c.field-meta.xml
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>