knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Full_Time_NPPA__c.field-meta.xml
<CustomField>
    <fullName>Full_Time_NPPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Time NPPA</label>
    <type>Checkbox</type>
</CustomField>