knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Half_Bonus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Half_Bonus_Amount__c</fullName>
    <label>Half Bonus Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>