knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Healthcare_Practitioner_Facility__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Practitioner_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Healthcare Practitioner Facility</label>
    <referenceTo>HealthcarePractitionerFacility</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>