knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Is_EE_NPPA__c.field-meta.xml
<CustomField>
    <fullName>Is_EE_NPPA__c</fullName>
    <formula>AND(TEXT(Contract__r.Employment_Type__c) = &apos;Employee&apos;,OR(TEXT(Contract__r.Account.Professional_Title__pc) = &apos;NP&apos;,TEXT(Contract__r.Account.Professional_Title__pc) = &apos;PA&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is EE NPPA</label>
    <type>Checkbox</type>
</CustomField>