knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Is_Full_Time_NPPA__c.field-meta.xml
<CustomField>
    <fullName>Is_Full_Time_NPPA__c</fullName>
    <formula>AND(TEXT(Contract__r.Time_Type__c) = &apos;Full Time&apos;,OR(TEXT(Contract__r.Account.Professional_Title__pc) = &apos;NP&apos;,TEXT(Contract__r.Account.Professional_Title__pc) = &apos;PA&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Full Time NPPA</label>
    <type>Checkbox</type>
</CustomField>