knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Leadership_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Incentive__c</fullName>
    <label>Leadership Incentive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>