knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Leadership_Position_Change__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Position_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leadership Position Change</label>
    <type>Checkbox</type>
</CustomField>