knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Leadership_Role_EM__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Role_EM__c</fullName>
    <formula>IF(
  AND(
    Service_Line__c = &quot;EM&quot;,
    OR(
      Stipend_Tier__c = &quot;Tier 1&quot;,
      Stipend_Tier__c = &quot;Tier 2&quot;,
      Stipend_Tier__c = &quot;Tier 3&quot;,
      Stipend_Tier__c = &quot;Tier 4&quot;,
      Stipend_Tier__c = &quot;Legacy&quot;
    )
  ),
  &quot;MEDICAL DIRECTOR&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leadership Role EM</label>
    <type>Text</type>
</CustomField>