knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Legacy_Encounter__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Encounter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Encounter</label>
    <type>Checkbox</type>
</CustomField>