knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Locums_Company__c.field-meta.xml
<CustomField>
    <fullName>Locums_Company__c</fullName>
    <label>Locums Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>