knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/New_Clinician__c.field-meta.xml
<CustomField>
    <fullName>New_Clinician__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Clinician</label>
    <type>Checkbox</type>
</CustomField>