knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/New_Hospital_Guarantee_Clause__c.field-meta.xml
<CustomField>
    <fullName>New_Hospital_Guarantee_Clause__c</fullName>
    <formula>Apttus__Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Hospital Guarantee Clause</label>
    <type>Text</type>
</CustomField>