knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/New_Provider_Guarantee_Clause__c.field-meta.xml
<CustomField>
    <fullName>New_Provider_Guarantee_Clause__c</fullName>
    <formula>Apttus__Company_Signed_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Provider Guarantee Clause</label>
    <type>Text</type>
</CustomField>